--- a/style.css
+++ b/style.css
@@ -229,7 +229,11 @@ Menu
   justify-content: center;
   align-items: center;
 }
-#sidebar-ul li {
+.redacted,
+#sidebar-homePlaceholder,
+#sidebar-userPlaceholder,
+#sidebar-levelUpPlaceholder,
+#sidebar-manageUserPlaceholder {
   color: white;
   font-weight: 500;
   letter-spacing: 0.5px;
@@ -237,7 +241,7 @@ Menu
   transition: .5s;
   border-bottom: 1px solid transparent;
 }
-#sidebar-ul sidebar-homePlaceholder {
+#sidebar-homePlaceholder {
   color: rgb(215, 80, 74);
   border-bottom: 1px solid white;
 }
