--- a/user/style.css
+++ b/user/style.css
@@ -6,7 +6,7 @@
 a {
     text-decoration: none;
   }
-  
+
   /*
   Menu
   */
@@ -117,7 +117,11 @@ a {
     justify-content: center;
     align-items: center;
   }
-  #sidebar-ul li {
+  .redacted,
+  #sidebar-homePlaceholder,
+  #sidebar-userPlaceholder,
+  #sidebar-levelUpPlaceholder,
+  #sidebar-manageUserPlaceholder {
     color: white;
     font-weight: 500;
     letter-spacing: 0.5px;
@@ -313,9 +317,6 @@ main {
   width: 85%;
   max-width: 100%;
   max-height: 100%;
-
-  /* border-radius: 50%;
-  background: linear-gradient(black 0%, #D7504A); */
 }
 #mintingInput-container {
   height: 100%;
@@ -401,7 +402,7 @@ main {
   grid-row: 1 / 2;
 
   display: grid;
-  grid-template-columns: 68% 11% 11% 10%;
+  grid-template-columns: 70% 10% 10% 10%;
 }
 #rewardIcon-container {
   grid-column: 3 / 4;
@@ -418,11 +419,21 @@ main {
   align-items: center;
 }
 #rewardIcon {
+  width: clamp(0px, 7vw, 60px); /* max managed by max-height/width*/
+
+  padding-left: 2px;
+
   max-width: 100%;
+  max-height: 100%;
   cursor: pointer;
 }
 #healthIcon {
+  width: clamp(0px, 7vw, 60px); /* max managed by max-height/width*/
+
+  padding-right: 2px;
+
   max-width: 100%;
+  max-height: 100%;
   cursor: pointer;
 }
 
@@ -570,6 +581,11 @@ main {
 }
 /* Style elements levels */
 #rcpIcon {
+  width: clamp(0px, 65%, 1000000px); /* max managed by max-height/width*/
+
+  margin-left: 10px;
+
+  max-height: 100%;
   max-width: 100%;
 }
 .data-level {
